--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -5,7 +5,7 @@
     android:background="@color/lime_white"
     android:orientation="vertical">
 
-    <RelativeLayout
+    <!--<RelativeLayout
         android:id="@+id/activity_setting_rl_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -29,7 +29,11 @@
             android:text="设置"
             android:textColor="#FFF"
             android:textSize="20dp" />
-    </RelativeLayout>
+    </RelativeLayout>-->
+
+    <include
+        android:id="@+id/title"
+        layout="@layout/activity_title_bar" />
 
     <RelativeLayout
         android:id="@+id/activity_setting_rl1"
