--- a/app/src/main/res/layout/activity_makeplan.xml
+++ b/app/src/main/res/layout/activity_makeplan.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@mipmap/plan_bgd"
-    tools:context="com.sibo.fastsport.MakeplanActivity">
+    tools:context=".activity.MakeplanActivity">
 
     <Button
         android:id="@+id/btn_makeNewPlan"
