--- a/app/src/main/res/layout/activity_title_bar.xml
+++ b/app/src/main/res/layout/activity_title_bar.xml
@@ -20,8 +20,7 @@
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
             android:layout_marginLeft="10dp"
-            android:src="@mipmap/back"
-            android:visibility="gone" />
+            android:src="@mipmap/back" />
 
 
         <TextView
@@ -42,6 +41,16 @@
             android:layout_centerVertical="true"
             android:layout_marginRight="10dp"
             android:src="@mipmap/close" />
+
+        <TextView
+            android:id="@+id/tv_complete_titlebar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="10dp"
+            android:text="@string/complete"
+            android:textColor="@color/white" />
 
     </RelativeLayout>
 
