--- a/app/src/main/res/layout/activity_student.xml
+++ b/app/src/main/res/layout/activity_student.xml
@@ -1,20 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:weightSum="1">
-
-
+    tools:context="com.sibo.fastsport.activity.StudentActivity">
 
     <include
-        android:id="@+id/myinfo_title"
+        android:id="@+id/student_title_bar"
         layout="@layout/activity_title_bar" />
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/activity_personalinfo_recycler_view"
+        android:id="@+id/student_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@id/student_title_bar"
         android:background="@color/white_bg"
         android:scrollbars="vertical" />
-</LinearLayout>
+</RelativeLayout>
