--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -14,4 +14,12 @@
         <attr name="selectedImage" format="reference" />         <!-- The selected image source -->
     </declare-styleable>
 
+    <declare-styleable name="CircleImageView">
+        <attr name="border_width" format="dimension" />
+        <attr name="border_color" format="color" />
+    </declare-styleable>
+
+    <declare-styleable name="DragScaleImageView">
+        <attr name="scale_image" format="reference|color" />
+    </declare-styleable>
 </resources>
