--- a/app/src/main/res/layout/activity_editzhuye.xml
+++ b/app/src/main/res/layout/activity_editzhuye.xml
@@ -7,8 +7,8 @@
     <RelativeLayout
         android:id="@+id/rl_head"
         android:layout_width="match_parent"
-        android:layout_height="140dp"
-        android:background="@color/turquoise">
+        android:layout_height="220dp"
+        android:background="@drawable/imagefirst">
         <ImageView
             android:id="@+id/activity_editzhuye_iv_back"
             android:layout_width="25dp"
@@ -39,7 +39,6 @@
             android:id="@+id/linearLayout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-
             android:layout_below="@+id/activity_editzhuye_iv_touxiang"
             android:layout_marginTop="10dp"
             android:orientation="horizontal">
@@ -131,135 +130,9 @@
             android:text="13990081234"
             android:textColor="#fff"
             android:textSize="13sp" />
+
+
     </RelativeLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_gravity="center_horizontal"
-        android:background="@color/mint_green"
-        android:orientation="horizontal">
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="1"
-            android:orientation="vertical">
-            <TextView
-                android:id="@+id/activity_editzhuye_tv_age"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="年龄"
-                android:textColor="#fff"
-                android:textSize="15dp" />
-            <TextView
-                android:id="@+id/activity_editzhuye_tv_ageEdit"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-
-                android:layout_marginTop="3dp"
-                android:text="30岁"
-                android:textColor="#fff"
-                android:textSize="18dp" />
-        </LinearLayout>
-
-        <TextView
-            android:layout_width="0.5dp"
-            android:layout_height="15dp"
-            android:layout_gravity="center"
-            android:background="@color/white" />
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="1"
-            android:orientation="vertical">
-            <TextView
-                android:id="@+id/activity_editzhuye_tv_tall"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="身高"
-                android:textColor="#fff"
-                android:textSize="15dp" />
-            <TextView
-                android:id="@+id/activity_editzhuye_tv_tallEdit"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="3dp"
-                android:text="180cm"
-                android:textColor="#fff"
-                android:textSize="18dp" />
-        </LinearLayout>
-
-        <TextView
-            android:layout_width="0.5dp"
-            android:layout_height="15dp"
-            android:layout_gravity="center"
-            android:background="@color/white" />
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="1"
-            android:orientation="vertical">
-            <TextView
-                android:id="@+id/activity_editzhuye_tv_weight"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="体重"
-                android:textColor="#fff"
-                android:textSize="15dp" />
-            <TextView
-                android:id="@+id/activity_editzhuye_tv_weightEdit"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="3dp"
-                android:text="75kg"
-                android:textColor="#fff"
-                android:textSize="18dp" />
-        </LinearLayout>
-
-        <TextView
-            android:layout_width="0.5dp"
-            android:layout_height="15dp"
-            android:layout_gravity="center"
-            android:background="@color/white" />
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="1"
-            android:orientation="vertical">
-            <TextView
-                android:id="@+id/activity_editzhuye_tv_teachyear"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:text="教龄"
-                android:textColor="#fff"
-                android:textSize="15dp" />
-            <TextView
-                android:id="@+id/activity_editzhuye_tv_teachyearEdit"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="3dp"
-                android:text="8年"
-                android:textColor="#fff"
-                android:textSize="18dp" />
-        </LinearLayout>
-    </LinearLayout>
-
     <ScrollView
         android:id="@+id/scrollView"
         android:layout_width="match_parent"
