--- a/app/src/main/res/layout/menu_layout.xml
+++ b/app/src/main/res/layout/menu_layout.xml
@@ -13,7 +13,7 @@
     app:needsElevation="true">
     <!--app:backgroundShapeRadius="30dp"-->
     <com.sibo.fastsport.widgets.MetaballMenuImageView
-        android:id="@+id/menuitem1"
+        android:id="@+id/menuPlan"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
@@ -23,7 +23,7 @@
 
 
     <com.sibo.fastsport.widgets.MetaballMenuImageView
-        android:id="@+id/menuitem2"
+        android:id="@+id/menuStudent"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
@@ -32,12 +32,11 @@
         app:selectedImage="@mipmap/student_focus" />
 
     <com.sibo.fastsport.widgets.MetaballMenuImageView
-        android:id="@+id/menuitem3"
+        android:id="@+id/menuMyhome"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:padding="10dp"
-
         app:defaultImage="@mipmap/wode"
         app:selectedImage="@mipmap/wode_focus" />
 </com.sibo.fastsport.widgets.MetaballMenu>
