这次使用的Fragment，切换计划、学员、我的，三个界面，但是出现了卡顿，所以下一次提交会优化Fragment的卡顿。。。。

--- a/app/src/main/res/layout/activity_makeplan.xml
+++ b/app/src/main/res/layout/activity_makeplan.xml
@@ -240,7 +240,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/plan_menu"
+
         android:layout_below="@id/plan_rl_exercise"
         android:layout_marginTop="10dp"
         android:background="@color/white">
@@ -262,7 +262,7 @@
             android:src="@mipmap/icon_camera" />
     </RelativeLayout>
 
-    <LinearLayout
+    <!--<LinearLayout
         android:id="@+id/plan_menu_ll"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -273,5 +273,5 @@
             android:id="@+id/plan_menu"
             layout="@layout/menu_layout" />
 
-    </LinearLayout>
+    </LinearLayout>-->
 </RelativeLayout>
