--- a/app/src/main/res/layout/activity_student.xml
+++ b/app/src/main/res/layout/activity_student.xml
@@ -13,12 +13,12 @@
         android:id="@+id/student_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/student_rl_meun"
+
         android:layout_below="@id/student_title_bar"
         android:background="@color/white_bg"
         android:scrollbars="vertical" />
 
-    <RelativeLayout
+    <!--<RelativeLayout
         android:id="@+id/student_rl_meun"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -27,5 +27,5 @@
         <include
             android:id="@+id/student_meun"
             layout="@layout/menu_layout" />
-    </RelativeLayout>
+    </RelativeLayout>-->
 </RelativeLayout>
