--- a/app/src/main/res/layout/activity_myhome.xml
+++ b/app/src/main/res/layout/activity_myhome.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:dragscaleimageview="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 
     >
 
-    <com.sibo.fastsport.view.DragScaleImageView
+    <RelativeLayout
         android:id="@+id/rl_head"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
 
-        dragscaleimageview:scale_image="@drawable/imagefirst">
+        >
 
         <ImageView
             android:layout_width="25dp"
@@ -268,7 +267,7 @@
                     android:textSize="18dp" />
             </LinearLayout>
         </LinearLayout>
-    </com.sibo.fastsport.view.DragScaleImageView>
+    </RelativeLayout>
 
 
     <ScrollView
