--- a/app/src/main/res/layout/activity_make_plan.xml
+++ b/app/src/main/res/layout/activity_make_plan.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/light_white"
-    tools:context="com.sibo.fastsport.activity.MakePlanActivity">
+    tools:context="com.sibo.fastsport.ui.MakePlanActivity">
 
     <include
         android:id="@+id/makePlanActivity_title"
