--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -22,4 +22,12 @@
     <declare-styleable name="DragScaleImageView">
         <attr name="scale_image" format="reference|color" />
     </declare-styleable>
+
+    <declare-styleable name="GifImageView">
+        <attr name="gif" format="reference" />
+        <attr name="paused" format="boolean" />
+    </declare-styleable>
+    <declare-styleable name="CustomTheme">
+        <attr name="gifViewStyle" format="reference" />
+    </declare-styleable>
 </resources>
