--- a/app/src/main/res/layout/activity_choose_action.xml
+++ b/app/src/main/res/layout/activity_choose_action.xml
@@ -10,11 +10,25 @@
         android:id="@+id/choose_title"
         layout="@layout/activity_title_bar" />
 
+    <com.sibo.fastsport.view.WhorlView xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/loading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        app:WhorlView_BigWhorlColor="@color/material_green"
+        app:WhorlView_CircleSpeed="270"
+        app:WhorlView_MiddleWhorlColor="@color/material_blue"
+        app:WhorlView_Parallax="fast"
+        app:WhorlView_SmallWhorlColor="@color/material_red"
+        app:WhorlView_StrokeWidth="8"
+        app:WhorlView_SweepAngle="180" />
+
     <ListView
         android:id="@+id/choose_action_listView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/choose_title"
         android:layout_marginTop="10dp"
-        android:background="@color/white"></ListView>
+        android:background="@color/white"
+        android:visibility="gone" />
 </RelativeLayout>
