--- a/app/src/main/res/layout/choose_action_item.xml
+++ b/app/src/main/res/layout/choose_action_item.xml
@@ -45,6 +45,7 @@
             android:layout_height="wrap_content"
             android:layout_alignTop="@id/choose_item_tv_level"
             android:layout_marginStart="3dp"
+            android:layout_marginTop="1dp"
             android:layout_toEndOf="@id/choose_item_tv_level"
             android:orientation="horizontal">
 
@@ -54,7 +55,7 @@
                 android:layout_height="12dp"
                 android:layout_marginEnd="2dp"
                 android:src="@mipmap/quanxing"
-                android:visibility="gone" />
+                android:visibility="visible" />
 
             <ImageView
                 android:id="@+id/choose_item_iv_level2"
