--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,4 +20,8 @@
     <color name="gray_hint">#959595</color>
     <color name="gray_dark">#999999</color>
     <color name="transparent_bg">#22ffffff</color>
+    <color name="material_red">#F44336</color>
+    <color name="material_green">#4CAF50</color>
+    <color name="material_blue">#5677fc</color>
+    <color name="dip_red">#c80000</color>
 </resources>
