--- a/app/src/main/res/layout/activity_news.xml
+++ b/app/src/main/res/layout/activity_news.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context="com.sibo.fastsport.ui.NewsActivity">
 
     <RelativeLayout
@@ -39,8 +38,10 @@
     </RelativeLayout>
 
     <com.handmark.pulltorefresh.library.PullToRefreshListView
-        android:id="@+id/news_pfl"
+        android:id="@+id/wx_pfl"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_below="@id/news_rl" />
 
-</LinearLayout>
+
+</RelativeLayout>
