--- a/app/src/main/res/layout/activity_news.xml
+++ b/app/src/main/res/layout/activity_news.xml
@@ -9,7 +9,7 @@
         android:id="@+id/news_rl"
         android:layout_width="match_parent"
         android:layout_height="45dp"
-        android:background="@color/dip_red">
+        android:background="@color/title">
 
         <ImageView
             android:id="@+id/news_back"
@@ -27,14 +27,6 @@
             android:textColor="@color/white"
             android:textSize="20sp" />
 
-        <ImageView
-            android:id="@+id/news_add"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:layout_marginEnd="10dp"
-            android:src="@mipmap/icon_add_newschannel" />
     </RelativeLayout>
 
     <com.handmark.pulltorefresh.library.PullToRefreshListView
@@ -43,5 +35,17 @@
         android:layout_height="match_parent"
         android:layout_below="@id/news_rl" />
 
+    <com.sibo.fastsport.view.WhorlView xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/news_loading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        app:WhorlView_BigWhorlColor="@color/turquoise"
+        app:WhorlView_CircleSpeed="270"
+        app:WhorlView_MiddleWhorlColor="@color/turquoise"
+        app:WhorlView_Parallax="fast"
+        app:WhorlView_SmallWhorlColor="@color/turquoise"
+        app:WhorlView_StrokeWidth="6"
+        app:WhorlView_SweepAngle="180" />
 
 </RelativeLayout>
