--- a/app/src/main/res/layout/activity_show_wx.xml
+++ b/app/src/main/res/layout/activity_show_wx.xml
@@ -6,8 +6,33 @@
     android:layout_height="match_parent"
     tools:context="com.sibo.fastsport.ui.ShowWXActivity">
 
+    <RelativeLayout
+        android:id="@+id/showx_rl"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:background="@color/title">
+
+        <ImageView
+            android:id="@+id/showx_back"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="10dp"
+            android:src="@mipmap/back" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="@string/showx"
+            android:textColor="@color/white"
+            android:textSize="20sp" />
+
+    </RelativeLayout>
+
     <WebView
         android:id="@+id/showwx_webview"
+        android:layout_below="@id/showx_rl"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 </RelativeLayout>
