--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -5,32 +5,6 @@
     android:background="@color/lime_white"
     android:orientation="vertical">
 
-    <!--<RelativeLayout
-        android:id="@+id/activity_setting_rl_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/black"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/activity_setting_back"
-            android:layout_width="wrap_content"
-            android:layout_height="25dp"
-            android:layout_margin="20dp"
-            android:src="@mipmap/fanhui_title"
-            />
-
-        <TextView
-            android:id="@+id/activity_setting_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:text="设置"
-            android:textColor="#FFF"
-            android:textSize="20dp" />
-    </RelativeLayout>-->
-
     <include
         android:id="@+id/title"
         layout="@layout/activity_title_bar" />
@@ -165,30 +139,15 @@
             android:src="@mipmap/you" />
     </RelativeLayout>
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
+    <Button
         android:layout_margin="40dp"
-        >
-
-        <ImageView
-            android:id="@+id/activity_setting_iv_exit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:src="@mipmap/redbtn" />
-
-        <TextView
-            android:id="@+id/activity_setting_tv_exit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:text="退出登陆"
-            android:textColor="@color/white"
-            android:textSize="15dp" />
-    </RelativeLayout>
+        android:id="@+id/activity_setting_btn_exit"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:background="@mipmap/redbtn"
+        android:text="@string/exit"
+        android:textColor="@color/white"
+        android:textSize="18sp" />
 
 
 </LinearLayout>
