--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -24,4 +24,5 @@
     <color name="material_green">#4CAF50</color>
     <color name="material_blue">#5677fc</color>
     <color name="dip_red">#c80000</color>
+    <color name="btn_bg">#fe5955</color>
 </resources>
