教练学员的界面切换，二维码的扫描

--- a/app/src/main/res/layout/plan_dialog.xml
+++ b/app/src/main/res/layout/plan_dialog.xml
@@ -35,4 +35,13 @@
         android:layout_marginTop="20dp"
         android:layout_below="@id/dialog_tv_userPlanName"
         android:layout_centerHorizontal="true" />
+
+    <ImageView
+        android:id="@+id/dialog_iv_close"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_alignRight="@id/dialog_iv_userCode"
+        android:layout_alignTop="@id/dialog_tv_userPlanName"
+        android:layout_toRightOf="@id/dialog_tv_userPlanName"
+        android:src="@mipmap/icon_close"/>
 </RelativeLayout>
