--- a/app/src/main/res/layout/activity_title_bar.xml
+++ b/app/src/main/res/layout/activity_title_bar.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/act_title_bar"
     android:layout_width="match_parent"
-    android:layout_height="44dip"
+    android:layout_height="44dp"
     android:background="@color/title"
     app:contentInsetLeft="0dp"
     app:contentInsetStart="0dp">
@@ -51,6 +51,16 @@
             android:layout_marginRight="10dp"
             android:text="@string/complete"
             android:textColor="@color/white" />
+
+        <ImageView
+            android:id="@+id/iv_scanner_titlebar"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="10dp"
+            android:layout_centerVertical="true"
+            android:src="@drawable/ck_sys_icon_11"
+            android:visibility="gone"/>
 
     </RelativeLayout>
 
