--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,11 +9,19 @@
         android:id="@+id/login_title"
         layout="@layout/activity_title_bar" />
 
+    <ImageView
+        android:id="@+id/login_logo"
+        android:layout_below="@id/login_title"
+        android:layout_width="150dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:layout_height="150dp"
+        android:src="@mipmap/logo"/>
     <RelativeLayout
         android:id="@+id/activity_login_rlAccountAndPassword"
         android:layout_width="match_parent"
         android:layout_height="120dp"
-        android:layout_below="@id/login_title"
+        android:layout_below="@id/login_logo"
         android:layout_marginTop="20dp"
         android:background="@color/white">
 
@@ -130,108 +138,4 @@
         android:textColor="@color/prompt_gray"
         android:textSize="15sp" />
 
-    <View
-        android:id="@+id/view"
-        android:layout_width="match_parent"
-        android:layout_height="0.5dp"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="158dp"
-        android:layout_marginLeft="25dp"
-        android:layout_marginRight="10dp"
-        android:layout_toLeftOf="@+id/tv_third"
-        android:background="@color/light_gray" />
-    <TextView
-        android:id="@+id/tv_third"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="150dp"
-        android:text="第三方登录"
-        android:textColor="@color/gray_dark"
-        android:textSize="15sp" />
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0.5dp"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="159dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="25dp"
-        android:layout_toRightOf="@id/tv_third"
-        android:background="@color/light_gray" />
-
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_alignTop="@id/tv_third"
-    android:layout_marginTop="40dp"
-    android:orientation="horizontal">
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:orientation="vertical">
-    <ImageView
-        android:id="@+id/iv_wechatLogin"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_gravity="center_horizontal"
-        android:src="@mipmap/icon_wechat" />
-
-    <TextView
-        android:id="@+id/tv_wechat"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="10dp"
-        android:text="微信"
-        android:textSize="15sp" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:orientation="vertical">
-    <ImageView
-        android:id="@+id/iv_qqLogin"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_gravity="center_horizontal"
-        android:src="@mipmap/icon_qq" />
-
-    <TextView
-        android:id="@+id/tv_qq"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="10dp"
-        android:text="QQ"
-        android:textSize="15sp" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:orientation="vertical">
-    <ImageView
-        android:id="@+id/iv_weiboLogin"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_gravity="center_horizontal"
-        android:src="@mipmap/icon_weibo" />
-
-    <TextView
-        android:id="@+id/tv_weibo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="10dp"
-        android:text="新浪微博"
-        android:textSize="15sp" />
-    </LinearLayout>
-</LinearLayout>
 </RelativeLayout>
