--- a/app/src/main/res/layout/fragment_makeplan.xml
+++ b/app/src/main/res/layout/fragment_makeplan.xml
@@ -67,6 +67,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/plan_btn_background"
+                android:editable="false"
                 android:gravity="center"
                 android:hint="@string/plan_sex"
                 android:textColor="@color/white"
